Dialog Box UI Layout

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 /[Aa]ssets/TilePallette/
 /[Aa]ssets/External Assets/
+/[Aa]ssets/TextMesh Pro/
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
